[gd_scene load_steps=11 format=3 uid="uid://b2or0d1dqyw0l"]

[ext_resource type="Script" uid="uid://dcxlf2cd5k5q6" path="res://Actors/Player/player.gd" id="1_5ni5v"]
[ext_resource type="Script" uid="uid://crwpsb4svk5eq" path="res://Actors/Player/camara_arm.gd" id="1_vhr1b"]
[ext_resource type="PackedScene" uid="uid://co47sqq6q74rq" path="res://Assets/male_base.tscn" id="3_8gtf5"]
[ext_resource type="Script" uid="uid://cyhxk36ccqils" path="res://new_scripts&&scenes/extra/pickup_items.gd" id="8_awv0x"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://bvw5kpbhwhwth" path="res://new_scripts&&scenes/animation_tree/Root.tres" id="18_rbp5l"]
[ext_resource type="Texture2D" uid="uid://cdypd7c41iqwq" path="res://Assets/Player/Health bar outline.png" id="19_cwpch"]
[ext_resource type="Texture2D" uid="uid://cqqpwutk3al5j" path="res://Assets/Player/Health bar fill.png" id="20_slsra"]
[ext_resource type="Script" uid="uid://daayr6wqcgpvi" path="res://new_scripts&&scenes/extra/health_bar.gd" id="21_slsra"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b63gh"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8gtf5"]
height = 3.1
radius = 2.0

[node name="Player" type="CharacterBody3D" groups=["Player"]]
collision_layer = 4
script = ExtResource("1_5ni5v")

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
spring_length = -3.0
script = ExtResource("1_vhr1b")
min_vert_angle = -1.0472

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D"]
transform = Transform3D(-0.999994, -0.00350844, -0.000541334, -0.00350847, 0.953502, 0.301368, -0.000541169, 0.301368, -0.953508, 0, 0.238527, -3.00845)
current = true

[node name="Body" type="Marker3D" parent="."]

[node name="MaleBase" parent="Body" instance=ExtResource("3_8gtf5")]

[node name="Skeleton3D" parent="Body/MaleBase/Armature_003" index="0"]
bones/0/position = Vector3(3.35659, -0.00610614, -103.683)
bones/0/rotation = Quaternion(-0.616663, 0.328121, -0.230041, 0.677602)
bones/1/position = Vector3(2.08616e-07, 8.67363, -0.598548)
bones/1/rotation = Quaternion(0.058389, 0.116245, -0.061479, 0.989595)
bones/2/position = Vector3(-3.57511e-07, 10.1433, 7.3947e-07)
bones/2/rotation = Quaternion(0.0196109, 0.034803, -0.0206428, 0.998989)
bones/3/position = Vector3(3.73544e-08, 11.5923, 4.89874e-07)
bones/3/rotation = Quaternion(0.018452, 0.0344201, -0.020023, 0.999036)
bones/4/position = Vector3(-5.21541e-08, 13.0414, -2.93696e-06)
bones/4/rotation = Quaternion(0.0655295, 0.0350963, 0.0135989, 0.997141)
bones/5/position = Vector3(7.59843e-07, 9.32034, 2.64047)
bones/5/rotation = Quaternion(0.115516, 0.483045, -0.00395377, 0.867933)
bones/6/position = Vector3(5.96046e-07, 19.5032, 5.52529)
bones/7/position = Vector3(6.25726, 10.5981, -0.177581)
bones/7/rotation = Quaternion(-0.695123, -0.286864, 0.544797, -0.371091)
bones/8/position = Vector3(-1.43823e-06, 13.0149, -2.16426e-07)
bones/8/rotation = Quaternion(0.182283, 0.006957, -0.0855711, 0.979491)
bones/9/position = Vector3(-5.11664e-06, 25.0859, -3.32261e-05)
bones/9/rotation = Quaternion(0.188065, -0.00226219, 0.71243, 0.67607)
bones/10/position = Vector3(4.81438e-06, 26.8588, -9.98829e-07)
bones/10/rotation = Quaternion(-0.172055, -0.789899, 0.00926344, 0.588533)
bones/11/position = Vector3(-2.47616, 4.30501, 1.27627)
bones/11/rotation = Quaternion(0.122496, -0.0193242, 0.374261, 0.918994)
bones/12/position = Vector3(-0.534957, 4.06713, -5.63498e-06)
bones/12/rotation = Quaternion(0.0190017, -0.00658359, 0.0650103, 0.997682)
bones/13/position = Vector3(-0.0212803, 3.0705, 2.32431e-06)
bones/13/rotation = Quaternion(-0.127495, 0.00796872, 0.137236, 0.982267)
bones/14/position = Vector3(0.556239, 2.20247, 1.40667e-05)
bones/15/position = Vector3(-3.33, 11.6145, -0.233673)
bones/15/rotation = Quaternion(0.516875, -0.0326408, 0.0316297, 0.854854)
bones/16/position = Vector3(0.0314971, 2.65963, -1.99276e-05)
bones/16/rotation = Quaternion(0.536574, -0.00205596, -0.0635696, 0.841453)
bones/17/position = Vector3(-0.00120211, 2.40228, 6.41179e-06)
bones/17/rotation = Quaternion(0.296356, 0.000514136, -0.0392264, 0.954272)
bones/18/position = Vector3(-0.030293, 2.05356, -1.04904e-05)
bones/19/position = Vector3(-1.08033, 11.9827, -0.411469)
bones/19/rotation = Quaternion(0.553038, -0.00363394, -0.016503, 0.832985)
bones/20/position = Vector3(0.04705, 3.11237, -1.04701e-05)
bones/20/rotation = Quaternion(0.528632, -0.00165163, -0.0622854, 0.846561)
bones/21/position = Vector3(-0.0083828, 2.69797, 8.95255e-06)
bones/21/rotation = Quaternion(0.258702, 0.000464139, -0.0329309, 0.965396)
bones/22/position = Vector3(-0.0386572, 2.43632, 1.71661e-05)
bones/23/position = Vector3(1.30878, 12.0612, -0.416655)
bones/23/rotation = Quaternion(0.609292, 0.00474088, -0.0267403, 0.792481)
bones/24/position = Vector3(0.0733476, 2.56548, -2.45325e-05)
bones/24/rotation = Quaternion(0.418169, -0.00262555, -0.0530066, 0.906817)
bones/25/position = Vector3(-0.00643349, 2.37515, 1.73223e-05)
bones/25/rotation = Quaternion(0.361998, 0.00268886, -0.0471988, 0.930979)
bones/26/position = Vector3(-0.0669103, 2.13214, -1.66893e-05)
bones/27/position = Vector3(3.10153, 11.021, -0.101937)
bones/27/rotation = Quaternion(0.626213, 0.0151098, -0.0567019, 0.777441)
bones/28/position = Vector3(-0.00564384, 2.20817, -2.6922e-05)
bones/28/rotation = Quaternion(0.381953, 1.99554e-05, -0.0423967, 0.923209)
bones/29/position = Vector3(0.00189304, 1.67205, 2.32093e-05)
bones/29/rotation = Quaternion(0.23232, -0.000170205, -0.0261734, 0.972287)
bones/30/position = Vector3(0.00374889, 1.49845, 2.14577e-06)
bones/31/position = Vector3(-6.25726, 10.5969, -0.159718)
bones/31/rotation = Quaternion(0.682239, -0.320182, 0.503516, 0.4225)
bones/32/position = Vector3(-6.12805e-08, 13.0149, -3.01678e-06)
bones/32/rotation = Quaternion(0.250358, -0.0840089, -0.103297, 0.958954)
bones/33/position = Vector3(4.85236e-06, 25.0845, 6.95906e-06)
bones/33/rotation = Quaternion(0.189346, 0.00197159, -0.732108, 0.65434)
bones/34/position = Vector3(-3.06261e-06, 26.85, -7.45703e-06)
bones/34/rotation = Quaternion(0.269082, 0.185652, 0.168241, 0.929959)
bones/35/position = Vector3(2.44558, 4.23679, 1.10875)
bones/35/rotation = Quaternion(0.385676, -0.211225, -0.213706, 0.872335)
bones/36/position = Vector3(0.405814, 3.99225, 7.34463e-06)
bones/36/rotation = Quaternion(-0.228914, -0.123627, 0.0917673, 0.961194)
bones/37/position = Vector3(0.00311086, 3.05582, 7.09829e-06)
bones/37/rotation = Quaternion(-0.238341, -0.0282688, 0.308273, 0.920523)
bones/38/position = Vector3(-0.408886, 2.43898, 2.5034e-06)
bones/39/position = Vector3(3.30078, 11.7573, -0.276785)
bones/39/rotation = Quaternion(0.0940722, 0.00891923, -0.0771661, 0.99253)
bones/40/position = Vector3(-0.076816, 2.62335, -8.14855e-06)
bones/40/rotation = Quaternion(0.452407, 0.00403981, 0.0529757, 0.890228)
bones/41/position = Vector3(3.95775e-05, 2.3783, 1.76655e-05)
bones/41/rotation = Quaternion(0.570918, -0.00676374, 0.0672114, 0.818223)
bones/42/position = Vector3(0.0767494, 2.01332, 2.38418e-07)
bones/43/position = Vector3(1.13375, 11.7541, -0.391007)
bones/43/rotation = Quaternion(0.443402, 0.00409753, -0.0150831, 0.896187)
bones/44/position = Vector3(-0.103038, 3.2593, 1.06386e-05)
bones/44/rotation = Quaternion(0.770055, 0.0067707, 0.0766021, 0.633325)
bones/45/position = Vector3(0.0211038, 2.69421, 1.00919e-05)
bones/45/rotation = Quaternion(0.713099, -0.0118417, 0.0692984, 0.697529)
bones/46/position = Vector3(0.0819523, 2.3753, -1.72854e-06)
bones/47/position = Vector3(-1.258, 11.8657, -0.341333)
bones/47/rotation = Quaternion(0.508485, -0.0238519, 0.0310103, 0.860182)
bones/48/position = Vector3(-0.128929, 2.76221, 4.16951e-06)
bones/48/rotation = Quaternion(0.557651, 0.00728185, 0.062635, 0.827677)
bones/49/position = Vector3(0.0129379, 2.33778, -2.28851e-06)
bones/49/rotation = Quaternion(0.446384, -0.00705569, 0.0565264, 0.893026)
bones/50/position = Vector3(0.115988, 2.06541, 9.74536e-06)
bones/51/position = Vector3(-3.17647, 11.2697, -0.23697)
bones/51/rotation = Quaternion(0.579504, -0.0287728, 0.0570245, 0.812462)
bones/52/position = Vector3(-0.0377432, 1.96155, 2.0506e-05)
bones/52/rotation = Quaternion(0.481179, 0.000592431, 0.0619821, 0.874428)
bones/53/position = Vector3(0.0223999, 1.6099, 3.43202e-06)
bones/53/rotation = Quaternion(0.333354, -0.00472021, 0.0326187, 0.942226)
bones/54/position = Vector3(0.0153582, 1.09857, -7.74861e-06)
bones/55/position = Vector3(8.12438, -4.81623, 0.986351)
bones/55/rotation = Quaternion(0.0673105, 0.236514, 0.959087, 0.140295)
bones/56/position = Vector3(1.36933e-06, 48.6756, -9.59837e-07)
bones/56/rotation = Quaternion(-0.254275, 0.0391737, 0.0232993, 0.966057)
bones/57/position = Vector3(-3.16419e-10, 46.7279, -7.07853e-07)
bones/57/rotation = Quaternion(0.461722, 0.310654, -0.0648667, 0.828311)
bones/58/position = Vector3(-4.1718e-06, 16.5323, 4.93439e-06)
bones/58/rotation = Quaternion(0.287835, -0.044474, 0.0132213, 0.956555)
bones/59/position = Vector3(5.9791e-07, 6.63497, -1.34112e-07)
bones/60/position = Vector3(-8.12438, -4.81624, 1.02881)
bones/60/rotation = Quaternion(-0.339136, 0.100831, 0.931522, 0.084185)
bones/61/position = Vector3(-8.29988e-07, 48.677, -1.33955e-06)
bones/61/rotation = Quaternion(-0.349978, 0.0621398, -0.0606757, 0.932723)
bones/62/position = Vector3(-7.91207e-07, 46.722, 1.78661e-06)
bones/62/rotation = Quaternion(0.709138, -0.106713, 0.030587, 0.696276)
bones/63/position = Vector3(1.92444e-06, 16.7587, 1.2878e-06)
bones/63/rotation = Quaternion(0.311518, 0.0403139, -0.0145898, 0.949273)
bones/64/position = Vector3(-5.97909e-07, 6.45107, 5.58786e-08)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00217, 0)
shape = SubResource("CapsuleShape3D_b63gh")

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Body/MaleBase")
tree_root = ExtResource("18_rbp5l")
anim_player = NodePath("../Body/MaleBase/AnimationPlayer")
parameters/Hit/BlendTree/Blend2/blend_amount = 0
parameters/Hit/BlendTree/Locomotion/movement/blend_position = 0

[node name="HealthBar" type="TextureProgressBar" parent="."]
anchors_preset = -1
anchor_left = 0.016
anchor_top = 0.931
anchor_right = 0.206
anchor_bottom = 0.954
offset_left = 0.567999
offset_top = -0.288025
offset_right = 509.688
offset_bottom = 34.808
grow_vertical = 0
scale = Vector2(0.3, 0.3)
value = 10.0
texture_over = ExtResource("19_cwpch")
texture_progress = ExtResource("20_slsra")
script = ExtResource("21_slsra")

[node name="Timers" type="Node" parent="."]

[node name="can_move_timer" type="Timer" parent="Timers"]
one_shot = true

[node name="dodging_timer" type="Timer" parent="Timers"]
wait_time = 1.6
one_shot = true

[node name="attacking_timer" type="Timer" parent="Timers"]
one_shot = true

[node name="jumping_timer" type="Timer" parent="Timers"]
one_shot = true

[node name="right_hand" type="BoneAttachment3D" parent="."]
transform = Transform3D(0.00523027, 0.00411223, -0.00746551, 0.00833004, -0.00432035, 0.00345616, -0.00180411, -0.00802646, -0.00568517, 0.240889, 1.12367, 0.206772)
bone_name = "mixamorig_RightHand"
bone_idx = 34
use_external_skeleton = true
external_skeleton = NodePath("../Body/MaleBase/Armature_003/Skeleton3D")

[node name="left_hand" type="BoneAttachment3D" parent="."]
transform = Transform3D(-0.00479289, 0.00758749, 0.00441114, -0.000628327, -0.00530979, 0.00845052, 0.00875405, 0.00377308, 0.00302167, 0.320372, 1.06925, -0.092312)
bone_name = "mixamorig_LeftHand"
bone_idx = 10
use_external_skeleton = true
external_skeleton = NodePath("../Body/MaleBase/Armature_003/Skeleton3D")

[node name="Item_picker" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 64
monitorable = false
script = ExtResource("8_awv0x")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Item_picker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_8gtf5")

[node name="RayCast3D" type="RayCast3D" parent="Item_picker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.57048, 0)
collision_mask = 65
collide_with_areas = true

[editable path="Body/MaleBase"]
